# gopro-usb-webcam-esp32p4

./: .gitignore  CMakeLists.txt  README.md  eth_hello_summary.txt  partitions_ota.csv  projet_start.md  readme_fr.md  repository_tuto.md  sdkconfig
main/: CMakeLists.txt  eth_hello_main.c  idf_component.yml
